# xcb-util-m4

./: .clang-format  .gitignore  meson.build
include/: entry.h  match.h  resource.h  util.h  xcb_xrm.h
src/: database.c  entry.c  match.c  resource.c  util.c
tests/: headless_runner.sh  tests_database.c  tests_match.c  tests_parser.c  tests_utils.c  tests_utils.h
